{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Player1",
            "id": "22d2758f-36c6-4a4a-8ecb-dbb6e24ae56d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "ca15de6f-6de3-4007-a63a-6de9e7399ed4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "4c496a6a-3730-41e3-809a-8fdbc14530ff",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2bb028a8-bf62-4a62-aa59-25caeeee2c59",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "759bfb7c-eeb7-4655-bf34-e76c0fbdfae5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player2",
            "id": "8790da2a-f4bd-46f4-bb8a-67ff654e62af",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "93525a4d-c18c-4726-b229-65258a3bbf46",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "63bc7d68-c0e4-4400-b83d-5891861a4873",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8d2d43ca-c3a2-4fc6-948a-9369f1632001",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bf1c85af-25d0-44b9-8a55-2c981ffb96db",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "2051b105-5d7f-4374-96dd-5171273f5549",
            "actions": [
                {
                    "name": "OpenUI",
                    "type": "Value",
                    "id": "ad2285f5-8a11-4d3b-b40b-22531c5f51d3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "fb638fbf-5677-4663-a991-73fb0afd9efe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6b712b43-f4a7-4297-82b0-aeccf0ac9a88",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b0e65a7-b28d-4fec-9e13-08bfbf32362c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}